# ORION

./: .containerignore  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Containerfile  Dockerfile  Makefile  README.md  TEST_RESULTS.md  docker-compose.yml  orion_cli.py  podman-compose.yml  pyproject.toml  run_server.py
.github/workflows/: ci.yml
Codebase/: ORION_IMPLEMENTATION_PLAN.md  ORION_Test_Report_v2.md  ORION_v1_6Phase_Prompts.md  ORION_v1_Architecture_Plan.md  P0-A_registry_win_binaries.py  P0-B_openrouter_model_update.yaml  P1-A_longterm_memory_fallback.py  P1-B_windows_utf8_encoding.py  P2_sse_stream_integration_test.py  SKILL.md  eval_task.py  openclaw_file_structure.md  openclaw_implementation_plan.md  orion_agent.py  planner.py
configs/agents/: executor.yaml  planner.yaml  supervisor.yaml  verifier.yaml
configs/llm/: groq.yaml  openrouter.yaml  router.yaml  vllm.yaml
configs/mcp/: browser.yaml  composio.yaml  github.yaml  os_automation.yaml  sandbox.yaml  servers.yaml
configs/memory/: longterm.yaml  working.yaml
configs/safety/: permissions.yaml  sandbox.yaml
infra/grafana/: dashboard.json
infra/k8s/: deployment.yaml  hpa.yaml  service.yaml
infra/prometheus/: openclaw_rules.yaml  orion_rules.yaml
orion/: __init__.py  agentscope_config.py
orion/agents/: __init__.py  base.py  executor.py  planner.py  supervisor.py  verifier.py
orion/api/: __init__.py  schemas.py  server.py
orion/api/routes/: __init__.py  status.py  tasks.py  tools.py
orion/core/: __init__.py  exceptions.py  result.py  task.py
orion/core/utils/: __init__.py  dag_utils.py  json_utils.py
orion/llm/: __init__.py  health.py  quota.py  router.py
orion/llm/providers/: __init__.py  base.py  groq_provider.py  openrouter_provider.py  vllm_provider.py
orion/memory/: __init__.py  embedder.py  longterm.py  retriever.py  working.py
orion/observability/: __init__.py  logger.py  metrics.py  tracer.py
orion/orchestrator/: __init__.py  dispatcher.py  model_wrapper.py  pipeline.py  rpc_server.py
orion/safety/: __init__.py  gate.py  manifest.py  rollback.py  sandbox.py
orion/tools/: __init__.py  mcp_client.py  registry.py  selector.py
orion/tools/categories/: __init__.py  browser_tools.py  github_tools.py  os_tools.py  os_tools_native.py  saas_tools.py  vision_tools.py
prompts/: executor_system.j2  planner_system.j2  supervisor_system.j2  verifier_system.j2
scripts/: colab_vision_server.py  eval_task.py  healthcheck.py  run_audits.py  run_server.py  seed_registry.py  start_vllm.sh
tests/: __init__.py  conftest.py  test_main.py
tests/fixtures/: mock_tool_responses.json  sample_tasks.json
tests/integration/: __init__.py  test_api.py  test_composio_mcp.py  test_mcp_tools.py  test_memory.py  test_pipeline.py
tests/unit/: __init__.py  test_exceptions.py  test_executor.py  test_longterm_memory.py  test_phase5.py  test_planner.py  test_registry.py  test_result.py  test_router.py  test_safety.py  test_supervisor.py  test_task.py  test_verifier.py  test_vision_tools.py  test_working_memory.py
